--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <application
         android:allowBackup="true"
@@ -11,20 +11,25 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Sage"
-        tools:targetApi="31" >
+        tools:targetApi="31">
         <activity
-            android:name="com.example.sage.Authentication"
+            android:name=".UserAccount"
             android:exported="false" />
         <activity
-            android:name="com.example.sage.Main"
-            android:exported="true"
-            tools:ignore="Instantiatable">
+            android:name=".SignUpActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Authentication"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
 
 </manifest>
