--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.Sage"
         tools:targetApi="31">
         <activity
-            android:name=".UserAccount"
+            android:name=".UserPage"
             android:exported="false" />
         <activity
             android:name=".SignUpActivity"
