--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,9 @@
         tools:targetApi="31">
         <activity
             android:name=".UserPage"
-            android:exported="false" />
+            android:exported="false"
+            android:windowSoftInputMode="adjustResize"> <!-- Add this line to adjust the layout -->
+        </activity>
         <activity
             android:name=".SignUpActivity"
             android:exported="false" />
